<resources>
    <string name="empty"></string>
    <string name="app_name">Expense Tracker</string>

    <!-- Category -->
    <string name="edit_category_name">Category name...</string>
    <string name="edit_category_description">Category description...</string>

    <!-- Expense -->
    <string name="expense_name">Expense name</string>
    <string name="expense_hint">Expense name...</string>

    <!-- Navigation -->
    <string name="nav_expenses">Expenses</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_next">Next</string>
    <string name="label_menu">Expense tracker menu</string>
    <string name="open_drawer">open_drawer</string>
    <string name="close_drawer">close_drawer</string>

    <!-- Hints -->
    <string name="hint_amount">0.00</string>

    <!-- Sample values -->
    <string name="sample_category">general</string>
    <string name="sample_category_abbr">R</string>
    <string name="sample_expense">general</string>
    <string name="sample_expense_long">english books for studying</string>
    <string name="sample_type">EXPENSE</string>
    <string name="sample_date">10 / 10 / 2010</string>
    <string name="sample_dateDayAndMonth">10 / 10</string>
    <string name="sample_dateYear">2010</string>
    <string name="sample_amount">100.00</string>
    <string name="sample_amountWithCurrency">$100.00</string>

    <!-- Labels -->
    <string name="label_add">Add</string>
    <string name="label_category">Category</string>
    <string name="label_category_selection">Category selection</string>
    <string name="label_date">Date</string>
    <string name="label_expense">Expense</string>
    <string name="label_expense_selection">Expense name selection</string>
    <string name="label_save">Save</string>
    <string name="label_type">Type</string>
    <string name="label_type_expense">Expense</string>
    <string name="label_type_income">Income</string>

    <!-- Actions -->
    <string name="action_copy">Copy…</string>
    <string name="action_quick_copy">Quick copy</string>
    <string name="action_filter">filter</string>
    <string name="action_sort">sort</string>
    <string name="action_sort_alphabetically">A-Z</string>
    <string name="action_sort_alphabetically_desc">Z-A</string>
    <string name="action_sort_date">Date</string>
    <string name="action_sort_date_desc">Date descending</string>
    <string name="action_sort_category">Category</string>
    <string name="action_sort_category_desc">Category descending</string>

    <string name="menu_icon">&#8942;</string>

</resources>
