<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:title="@string/action_sort">
        <menu>
            <item android:id="@+id/action_sort_alphabetically"
                android:title="@string/action_sort_alphabetically"/>
            <item android:id="@+id/action_sort_alphabetically_desc"
                android:title="@string/action_sort_alphabetically_desc"/>
        </menu>
    </item>

    <item android:id="@+id/action_filter"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="never"
        android:orderInCategory="2"
        android:title="@string/action_filter"/>

</menu>