<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pscurzytek.expensetracker.activities.ExpenseDetailsActivity">

    <android.support.constraint.ConstraintLayout style="@style/Activity_Layout">

        <TextView
            android:id="@+id/tv_name_label"
            android:text="@string/label_expense"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Details_Label"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_name_label"
            app:layout_constraintTop_toTopOf="@+id/tv_name_label"
            tools:text="@string/sample_expense" />

        <TextView
            android:id="@+id/tv_category_label"
            android:text="@string/label_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_category"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_label"
            style="@style/Details_Label" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_name"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:text="@string/sample_category" />

        <TextView
            android:id="@+id/tv_type_label"
            android:text="@string/label_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_type"
            app:layout_constraintTop_toBottomOf="@+id/tv_category_label"
            style="@style/Details_Label" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_category"
            app:layout_constraintStart_toStartOf="@+id/tv_category"
            app:layout_constraintTop_toBottomOf="@+id/tv_category"
            tools:text="@string/sample_type" />

        <TextView
            android:id="@+id/tv_date_label"
            android:text="@string/label_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/et_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_type_label"
            style="@style/Details_Label" />

        <EditText
            android:id="@+id/et_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="date"
            android:onClick="showDatePickerDialog"
            android:singleLine="true"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/tv_date_label"
            app:layout_constraintEnd_toEndOf="@+id/tv_type"
            app:layout_constraintStart_toStartOf="@+id/tv_type"
            app:layout_constraintTop_toTopOf="@+id/tv_date_label" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_date"
            tools:text="@string/sample_amount" />

        <Button
            android:id="@+id/button"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="onExpenseSave"
            android:text="@string/label_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

    </android.support.constraint.ConstraintLayout>

</layout>
