<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pscurzytek.expensetracker.activities.ExpenseSelectionActivity">

    <EditText
        android:id="@+id/tv_expense_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:inputType="text|textAutoComplete|"
        android:textSize="24sp"
        android:hint="@string/expense_hint"
        app:layout_constraintEnd_toStartOf="@+id/btn_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/expense_name" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/nav_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_expense_name"
        app:layout_constraintTop_toTopOf="@+id/tv_expense_name"
        app:layout_constraintBottom_toBottomOf="@+id/tv_expense_name" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_expenses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="265dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_next"
        app:layout_constraintStart_toStartOf="@+id/tv_expense_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_expense_name" />

</android.support.constraint.ConstraintLayout>
