<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout android:id="@+id/rl_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightRed">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_bin"
            android:alpha="0.5"
            android:layout_marginEnd="20dp"/>

    </RelativeLayout>

    <RelativeLayout android:id="@+id/rl_foreground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@android:color/darker_gray"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onExpenseClicked"
            android:orientation="horizontal"
            android:padding="@dimen/list_item_padding">

            <TextView
                android:id="@+id/tv_expense_name"
                style="@style/Fragment_List_Label"
                android:layout_weight="2"
                tools:text="@string/sample_expense" />

            <TextView
                android:id="@+id/tv_expense_category"
                style="@style/Fragment_List_Label"
                android:layout_weight="1"
                android:textAllCaps="true"
                tools:text="@string/sample_category_abbr" />

            <TextView
                android:id="@+id/tv_expense_amount"
                style="@style/Fragment_List_Label"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                tools:text="@string/sample_amount" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>