<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pscurzytek.expensetracker.activities.CategoryDetailsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp"
    android:paddingTop="16dp">

    <!-- TODO: add color and icon selectors -->

    <EditText
        android:id="@+id/et_category_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_category_name"
        android:inputType="textCapCharacters|textAutoComplete"
        android:maxLines="1"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_category_description"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:hint="@string/edit_category_description"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/et_category_name"
        app:layout_constraintStart_toStartOf="@+id/et_category_name"
        app:layout_constraintTop_toBottomOf="@+id/et_category_name" />

    <TextView
        android:id="@+id/lbl_type"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:text="@string/label_type"
        app:layout_constraintStart_toStartOf="@+id/et_category_description"
        app:layout_constraintTop_toBottomOf="@+id/et_category_description" />

    <FrameLayout
        android:id="@+id/fl_type_select"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/et_category_description"
        app:layout_constraintStart_toStartOf="@+id/et_category_description"
        app:layout_constraintTop_toBottomOf="@+id/lbl_type">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_category_type_income"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/materialGreen"
                android:onClick="onTypeSelected"
                android:text="@string/label_type_income"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_category_type_expense"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/materialRed"
                android:onClick="onTypeSelected"
                android:text="@string/label_type_expense"
                android:textColor="@color/white" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/rbtn_category_type_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onTypeSelected"
                android:theme="@style/WhiteRadioButton" />

            <RadioButton
                android:id="@+id/rbtn_category_type_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="onTypeSelected"
                android:theme="@style/WhiteRadioButton" />

        </RadioGroup>
    </FrameLayout>

    <Button
        android:id="@+id/btn_add_category"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="onCategorySave"
        android:text="@string/label_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_type_select" />

</android.support.constraint.ConstraintLayout>
